# ncrads9

./: .gitignore  ALL_DIALOGS_FIX.md  COLORBAR_PANNER_FEATURES.md  DS9_ENHANCEMENTS.md  DS9_FIXES_V2.md  DS9_FIXES_V3.md  FEATURES.md  IMAGE_CENTERING_FIX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_FIXES.md  README.md  SESSION_SUMMARY.md  TESTING_NOTES.md  pyproject.toml  test.reg  test_components.py  test_ds9_features.py  test_ui_manual.py
docs/: Makefile  index.html
docs/api_reference/: index.html
docs/developer_guide/: index.html
docs/latex/: ncrads9_manual.tex
docs/user_guide/: analysis.html  colormaps.html  getting_started.html  index.html  opening_files.html  regions.html
ncrads9/: __init__.py  __main__.py  app.py
ncrads9.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ncrads9/analysis/: __init__.py  centroid.py  contour.py  histogram.py  pixel_table.py  radial_profile.py  smooth.py  statistics.py
ncrads9/catalogs/: __init__.py  catalog_base.py  catalog_display.py  catalog_table.py  cone_search.py  ned.py  sdss.py  simbad.py  skybot.py  twomass.py  vizier.py
ncrads9/colormaps/: __init__.py  builtin_maps.py  colorbar_widget.py  colormap.py  lut_parser.py  sao_parser.py
ncrads9/communication/: __init__.py
ncrads9/coordinates/: __init__.py  coord_system.py  ecliptic.py  fk4_fk5.py  galactic.py  image_coords.py  physical_coords.py  sexagesimal.py  wcs_coords.py
ncrads9/core/: __init__.py  cube_handler.py  data_cache.py  fits_handler.py  header_parser.py  image_data.py  (+1 more)
tests/: __init__.py  conftest.py
(+171 files in other folders)
